# landpage-rosangela

./: CNAME  README.md  index.html  pyproject.toml  script.js  styles.css
